# Grounded-SAM2

./: .gitignore  .gitmodules  LICENSE  README.md  detections.py  grounding_dino.py  pyproject.toml  sam2.py
